admin/styles/_maintenance.scss
.maintenance {
  background: #fff;
  border-radius: $Border-Radius;
  box-shadow: $Box-Shadow;
  margin-bottom: 2.43em;
  padding: 1.18em 1.71em;
}

.maintenance-info {
  align-items: center;
  display: flex;
}

.maintenance-info__title {
  color: $Color-RevolutionGray;
  display: inline-block;
  font-size: 1.14em;
  font-weight: 400;
  line-height: 1.71em;
  margin-bottom: 0.18em;
  margin-right: 0.6em;
}

.maintenance-info__text {
  color: $Color-GraniteGray-700;
  flex: 1 1 auto;
}

.maintenance-info__body {
  line-height: 1.36em;
}

.maintenance-configure {
  background: #fff;
  border-radius: $Border-Radius;
  box-shadow: $Box-Shadow;
  padding: 1.43em 0;
}

.maintenance-configure__container {
  display: flex;
  margin-bottom: 0.5em;
}

.maintenance-configure__buttons {
  display: flex;
}


.maintenance-configure__btn {
  display: block;
  margin-right: 1em;
}

.maintenance-configure__btn--cancel,
.maintenance-configure__btn--submit {
  min-width: 75px;
}

.maintenance-configure__btn--page-route {
  margin: 0 8px;
  min-width: 58px;
}

.maintenance-configure__datetime {
  margin-top: 0.214em;
  padding-left: 1.5em;
}

.maintenance-configure__datetimes-wrapper {
  display: flex;
}

.maintenance-configure__datetime-wrapper {
  width: 50%;
}

.maintenance-configure__description {
  border-bottom: solid 1px $Color-GraniteGray-50;
  margin-bottom: 1.63em;
  padding: 0 1.71em 1.35em;
}

.maintenance-configure__error {
  color: $Color-ErrorRed;
}

.maintenance-configure__form {
  padding: 0 1.71em;
}

.maintenance-configure__fieldset {
  border: none;
  margin: 1.5em 0 0;
  padding-left: 0;
}

.maintenance-configure__fieldset--advanced {
  margin-top: 1.21em;
}

.maintenance-configure__label {
  display: block;
  margin-bottom: 0.2em;
}

.maintenance-configure__checkbox-label {
  margin-bottom: 0.714em;
}

.maintenance-configure__radio-label {
  margin-bottom: 0.5em;
}

.maintenance-configure__input[type=text] {
  margin-bottom: 0;
}

.maintenance-configure__advanced {
  margin-bottom: 3.3em;
}

.maintenance-configure__show-advanced {
  background: none;
  border: 0;
  color: $Color-BayBlue-500;
  cursor: pointer;
  letter-spacing: 0.05em;
  padding: 0 1.25em 0 0;
  position: relative;
  text-decoration: none;
}

.maintenance-configure__show-advanced:hover {
  text-decoration: underline;
}

.maintenance-configure__show-advanced::after {
  @include IconFontProps;
  content: $IconArrow3;
  font-size: 0.6em;
  position: absolute;
  right: 2px;
  top: 4px;
  transform: rotate(-90deg);
}

.maintenance-configure__show-advanced:hover::after {
  text-decoration: none;
}

.maintenance-configure__show-advanced.maintenance-configure__show-advanced-icon--open::after {
  transform: rotate(90deg);
}

.maintenance-configure__calendar-icon {
  color: $Color-GraniteGray-300;
  font-size: 1.214em;
  margin: 0 1.214em;
  position: absolute;
  right: -5px;
  top: 11px;
}

.maintenance-configure__calendar-icon::before {
  @include IconFontProps;
  content: $IconCalendar;
}

.maintenance-configure__page-routes {
  margin-top: 0;
  padding-left: 1.214em;
}

.maintenance-status {
  background: $Color-BayBlue-50;
  border-radius: 8px;
  box-shadow: $Box-Shadow;
  color: $Color-RevolutionGray;
  font-size: 1em;
  line-height: 1.33;
  margin-top: 1.1em;
}

.maintenance-status__row {
  display: flex;
  padding: 1.07em 1.1em;
}

.maintenance-status__row:not(:last-child) {
  border-bottom: solid 1px $Color-BayBlue-100;
}

.maintenance-status__label {
  flex: none;
  padding-right: 1.1em;
  width: 10.5em;
}

.maintenance-status__value {
  flex: 1 1 auto;
}

